tests/negative/test_expr_asgn_non_ref.orb
fnc main() () {
    += 3 1;
};